<?xml version="1.0"?>
<package>
  <name>rover_description</name>
  <version>0.0.0</version>
  <description>The rover_description package</description>

  <maintainer email="davidjorna@gmail.com"/>

  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>gazebo</run_depend>
  
  <export>
    <architecture_independent />
  </export>
  
</package>
